# axum-playground

./: CHANGELOG.md  Cargo.toml  bomp.toml  flake.nix
.github/workflows/: build.yml
api/: Cargo.toml
api/src/: app.rs  lib.rs  main.rs  posts.rs
dynamodb_utils/: Cargo.toml
